# diaspora_be

./: .env  Cargo.toml  Dockerfile
.github/workflows/: general.yml
.sqlx/: query-b7e8883810147ff2186a2011e829185e76bfcc2ae64625763bd41a91ffd1dffc.json
configuration/: base.yaml
docs/: architecture.md
migrations/: 20250516043955_create_users_table.sql  20250516044031_create_items_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  items.rs  mod.rs  mode_switch_logs.rs  users.rs
tests/: health_check.rs
