[package]
name = "diaspora_be"
version = "0.1.0"
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
name = "diaspora_be"
path = "src/lib.rs"

[[bin]]
name = "diaspora_be"
path = "src/main.rs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15.11"
chrono = "0.4.15"
rust_decimal = "1.37"
tracing = {version = "0.1.41", features = ["log"]}
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "=0.3.10"
tracing-actix-web = "0.7"
secrecy = { version = "0.10.3", features = ["serde"] }

[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
]

[dependencies.sqlx]
version = "0.8.5"
default-features = false
features = [
    "runtime-tokio",           # Use tokio runtime
    "tls-rustls-ring-webpki",  # Use rustls TLS if you need TLS
    "macros",                  # For query! macros
    "postgres",                # PostgreSQL support
    "uuid",                    # For UUID support
    "chrono",                  # For timestamps
    "migrate",                 # For migrations
    "json",                    # For JSONB support
    "rust_decimal",            # For DECIMAL columns (choose either this or bigdecimal)
]

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
dotenvy = "0.15"
once_cell = "1.21.3"